# MSA-Auth-lite

./: .env.example  README.md  docker-compose.yaml
auth_service/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  todo.todo
auth_service/app/: __init__.py  main.py
auth_service/app/api/: __init__.py
auth_service/app/api/auth/: auth_dependencies.py  auth_dtos.py  auth_exceptions.py  auth_producer.py  auth_provider.py  auth_router.py  auth_service.py
auth_service/app/api/token/: __init__.py  token_dto.py  token_model.py  token_provider.py  token_repository.py  token_service.py
auth_service/app/api/user/: __init__.py  user_dtos.py  user_events.py  user_model.py  user_provider.py  user_repository.py  user_service.py
auth_service/app/core/config/: constans.py
auth_service/app/core/exception_handlers/: __init__.py
auth_service/app/core/exceptions/: domain_base_exception.py
auth_service/app/core/ioc/: build_ioc.py
auth_service/app/core/logger/: logger_config.py
auth_service/app/core/middlewares/: __init__.py
auth_service/app/core/server/: app_server.py  lifespan.py
auth_service/app/infastructure/database/: __init__.py  base.py  base_repository.py  db_mixins.py  db_response_mixins.py  db_util.py
auth_service/app/infastructure/jwt/: __init__.py  jwt_enums.py  jwt_exceptions.py  (+2 more)
user_service/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  gunicorn_conf.py  pyproject.toml
user_service/app/: __init__.py  main.py
user_service/app/api/: __init__.py
user_service/migration/: env.py
(+52 files in other folders)
